Improve routing rules

--- a/Rules
+++ b/Rules
@@ -96,28 +96,15 @@ compile '/**/*' do
   write item.identifier.to_s
 end
 
-route '/articles/**/index.{html,adoc}' do
-  yyyy,mm,dd,slug,relpath = /\/([0-9]{4})-([0-9]{2})-([0-9]{2})-([^\/]+)\/(.+)$/
-    .match(@item.identifier.without_ext).captures
-  "/#{yyyy}/#{mm}/#{dd}/#{slug}/#{relpath}.html"
-end
-
-route '/articles/**/*.{html,adoc}' do
-  yyyy,mm,dd,slug,relpath = /\/([0-9]{4})-([0-9]{2})-([0-9]{2})-([^\/]+)\/(.+)$/
-    .match(@item.identifier.to_s).captures
-  "/#{yyyy}/#{mm}/#{dd}/#{slug}/#{relpath}/index.html"
-#  if item.identifier =~ '/index.*'
-#    '/index.html'
-#  else
-#    item.identifier.without_ext + '/index.html'
-#  end
+# /articles/**/yyyy-mm-dd-slug/**/index.{html,adoc} => /yyyy/mm/dd/slug/**/index.html
+# /articles/**/yyyy-mm-dd-slug/**/*.{html,adoc} => /yyyy/mm/dd/slug/**/*/index.html
+route %r[^/articles/(?:.+?/)?(\d{4})-(\d{2})-(\d{2})-(.+?)(?:/index)?\.(?:html|adoc)$] do |yyyy, mm, dd, slug_relpath|
+  "/#{yyyy}/#{mm}/#{dd}/#{slug_relpath}/index.html"
 end
 
 # /articles/**/yyyy-mm-dd-slug/* => /yyyy/mm/dd/slug/*
-route '/articles/**/*' do
-  yyyy,mm,dd,slug,relpath = /\/([0-9]{4})-([0-9]{2})-([0-9]{2})-([^\/]+)\/(.+)$/
-    .match(@item.identifier.to_s).captures
-  "/#{yyyy}/#{mm}/#{dd}/#{slug}/#{relpath}"
+route %r[^/articles/(?:.+?/)?(\d{4})-(\d{2})-(\d{2})-(.+)$] do |yyyy, mm, dd, slug_relpath|
+  "/#{yyyy}/#{mm}/#{dd}/#{slug_relpath}"
 end
 
 route '/assets/**/*.scss' do
@@ -128,12 +115,12 @@ route '/assets/**/*' do
   @item.identifier.to_s
 end
 
-route '/archives/**/*' do
-  relpath = /^\/[^\/]*(\/.*)$/.match(@item.identifier.to_s).captures[0]
-  relpath
+route %r[/archives(/.*)] do |relpath|
+  relpath[0]
 end
 
-route %r[/members/([0-9]+)/([^/]+)/index\.adoc] do |year, name|
+# /members/yyyy/*/index.adoc => /members/yyyy/*/index.html
+route %r[^/members/(\d{4})/([^/]+)/index\.adoc$] do |year, name|
   "/members/#{year}/#{name}/index.html"
 end
 
